# sentsplit

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  PR_MESSAGE.md  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
sentsplit/: __init__.py  cli.py  config.py  meta_data.py  regexes.py  segment.py  train.py  utils.py
sentsplit/crf_models/: de-default-25032021.model  en-default-25032021.model  fr-default-25032021.model  it-default-25032021.model  ja-default-05042021.model  ja-default-25032021.model  ko-default-05042021.model  ko-default-25032021.model  ko-default-27032021.model  lt-default-25032021.model  pl-default-25032021.model  pt-default-25032021.model  ru-default-25032021.model  tr-default-25032021.model  zh-default-05042021.model  zh-default-25032021.model
tests/: test_options.py  test_segment.py
