[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
    "E711",
    "E712",
    "UP007",
    "UP035",
]

[tool.ruff.lint.isort]
known-first-party = ["sentsplit"]

[tool.ruff.format]
quote-style = "double"
